display of featured news complete

--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
 
 
     </div>
-
+    <div id="topnews">
+        <div id="featurednewsdiv"></div>
+    <div id="topstoriesdiv">
+        <h2>TOP STORIES</h2>
+    </div>
+    <div id="advitisement&opinion"></div>
+    </div>
+    
+<dir id="newscategories"></dir>
 </body>
 
 </html>
