--- a/Pages/detailedArticle.html
+++ b/Pages/detailedArticle.html
@@ -86,8 +86,6 @@
         gap: 35px;
         /* transition: top 2s ease-in;
         transition-duration: 20s; */
-        /* animation-name: fade;
-        animation-duration: 1.5s; */
     }
 
     #footerBlock2 h4 {
@@ -99,6 +97,7 @@
         font-size: 12px;
         line-height: 30px;
         color: grey;
+        /* display: block; */
     }
 
     .footerMenu:hover {
@@ -127,7 +126,7 @@
     #footerBlock3>:last-child {
         font-size: 11px;
         color: grey;
-        padding: 8px 11px;
+        padding: 8px 5px;
     }
 
     @media (max-width: 290px) {
