--- a/index.html
+++ b/index.html
@@ -27,9 +27,16 @@
     <div id="topstoriesdiv">
         <h2>TOP STORIES</h2>
     </div>
-    <div id="advitisement&opinion"></div>
+    <div id="advitisement&opinion">
+        <div id="Ads"></div>
+        <div id="opinions"></div>
     </div>
-    
+    </div>
+    <div id="specials">
+        <div id="visualstories"></div>
+        <div id="todaysspecials"></div>
+        <div></div>
+    </div>
 <dir id="newscategories"></dir>
 </body>
 
