--- a/Pages/detailedArticle.html
+++ b/Pages/detailedArticle.html
@@ -4,16 +4,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title id="pageTitle">Document</title>
     <link rel="stylesheet" href="../Styles/detailedArticle.css">
-    <link rel="icon" href="../Images/titleIcon.ico">
+    <link rel="icon" href="https://www.indiatoday.in/sites/all/themes/itg/favicon.ico">
 </head>
 
 <body>
     <div id="mobilesidebar"></div>
     <div id="head"></div>
     <div id="navbar"></div>
-    <div id="articleContainer"></div>
+    <div id="articleContainer">
+        <div id="showArticle">
+            <p id="showCategoery"></p>
+            <h1 id="newsTitle"></h1>
+            <em></em>
+            <div id="authorDetails">
+                <div id="authorPicBox">
+                    <div><img src="..//Images/newsDetails/userProfile.jpg"></div>
+                    <div>
+                        <p id="auName"></p>
+                        <p id="postedDate"></p>
+                    </div>
+                </div>
+                <div id="socialLinks">
+                    <a target="_blank" href="https://www.youtube.com/channel/UCYPvAwZP8pZhSMW8qs7cVCw"><img
+                            class="social-icons" src="../Images/newsDetails/youtube.webp"></a>
+                    <a target="_blank" href="https://www.facebook.com/IndiaToday"><img class="social-icons"
+                            src="../Images/newsDetails/fb.webp"></a>
+                    <a target="_blank" href="https://twitter.com/indiatoday"><img class="social-icons"
+                            src="../Images/newsDetails/twitter.webp"></a>
+                    <a target="_blank" href="#"><img class="social-icons" src="../Images/newsDetails/whatsapp.webp"></a>
+                    <a target="_blank" href="#"><img class="social-icons" src="../Images/newsDetails/bookmark.webp"></a>
+                    <a target="_blank" href="#"><img class="social-icons" src="../Images/newsDetails/comment.webp"></a>
+                </div>
+            </div>
+            <div id="posterBox"><img src="" id="articlePoster"></div>
+            <div id="audioBox"></div>
+            <div id="newsContentBox">
+                <p id="newsContent1"></p>
+                <br>
+                <br>
+                <p id="newsContent2"></p>
+                <br>
+                <br>
+                <br>
+                <p id="newsContent3"></p>
+                <br>
+                <br>
+                <br>
+                <br>
+                <p id="newsContent4"></p>
+            </div>
+            <div id="readMoreButt"><button>Read More ➥</button></div>
+        </div>
+        <div id="suggestedArticle"></div>
+    </div>
     <div id="footerContainer"></div>
     </div>
 </body>
