--- a/indiaToday clone/liveTv.html
+++ b/indiaToday clone/liveTv.html
@@ -13,7 +13,7 @@
 
     <div id="top_ad">
         <div id="ad">
-
+            <img style="height: 100%;" src="https://tpc.googlesyndication.com/simgad/1242998024717887892">
         </div>
     </div>
 
@@ -66,59 +66,7 @@
 
             <!-- TO THE POINT -->
             <div id="newsToday-flexbox-3" class = "newsToday-flexbox">
-                <div>
-                    <div>
-                        <iframe src="https://www.youtube.com/watch?v=QQF4Uz4CZMg"></iframe>
-
-                    </div>
-
-                    <div>
-                        <p>Parliament debates <br>price rise after days of <br>disruptions; Political <br>war breaks out over <br>Sanjay Raut's arrest;<br> more</p>
-                    </div>
-                </div>
-
-
-                <div>
-                    <div>
-                        <iframe src="https://www.youtube.com/watch?v=QQF4Uz4CZMg"></iframe>
-
-                    </div>
-
-                    <div>
-                        <p>Parliament debates <br>price rise after days of <br>disruptions; Political <br>war breaks out over <br>Sanjay Raut's arrest;<br> more</p>
-                    </div>
-
-                </div>
-
-
-                <div>
-                    <div>
-                        <iframe src="https://www.youtube.com/watch?v=QQF4Uz4CZMg"></iframe>
-
-                    </div>
-
-                    <div>
-                        <p>Parliament debates <br>price rise after days of <br>disruptions; Political <br>war breaks out over <br>Sanjay Raut's arrest;<br> more</p>
-                    </div>
-                </div>
-
-
-                <div>
-                    <div>
-                        <iframe src="https://www.youtube.com/watch?v=QQF4Uz4CZMg"></iframe>
-
-                    </div>
-
-                    <div>
-                        <p>Parliament debates <br>price rise after days of <br>disruptions; Political <br>war breaks out over <br>Sanjay Raut's arrest;<br> more</p>
-                    </div>
-                </div>
-
-
             </div>
-
-
-
 
             <div id="newsToday-division">
                 <p>INDIA FIRSTT</p>
@@ -126,64 +74,7 @@
 
             <!-- INDIA FIRST -->
             <div id="newsToday-flexbox-4" class = "newsToday-flexbox">
-                <div>
-                    <div>
-                        <iframe src="https://www.youtube.com/watch?v=QQF4Uz4CZMg"></iframe>
-
-                    </div>
-
-                    <div>
-                        <p>Parliament debates <br>price rise after days of <br>disruptions; Political <br>war breaks out over <br>Sanjay Raut's arrest;<br> more</p>
-                    </div>
-                </div>
-
-
-                <div>
-                    <div>
-                        <iframe src="https://www.youtube.com/watch?v=QQF4Uz4CZMg"></iframe>
-
-                    </div>
-
-                    <div>
-                        <p>Parliament debates <br>price rise after days of <br>disruptions; Political <br>war breaks out over <br>Sanjay Raut's arrest;<br> more</p>
-                    </div>
-
-                </div>
-
-
-                <div>
-                    <div>
-                        <iframe src="https://www.youtube.com/watch?v=QQF4Uz4CZMg"></iframe>
-
-                    </div>
-
-                    <div>
-                        <p>Parliament debates <br>price rise after days of <br>disruptions; Political <br>war breaks out over <br>Sanjay Raut's arrest;<br> more</p>
-                    </div>
-                </div>
-
-
-                <div>
-                    <div>
-                        <iframe src="https://www.youtube.com/watch?v=QQF4Uz4CZMg"></iframe>
-
-                    </div>
-
-                    <div>
-                        <p>Parliament debates <br>price rise after days of <br>disruptions; Political <br>war breaks out over <br>Sanjay Raut's arrest;<br> more</p>
-                    </div>
-                </div>
-
-
             </div>
-
-
-
-
-
-
-
-
 
         </div>
 
@@ -193,6 +84,8 @@
 
                 <!-- first division -->
                 <div id="rightOne">
+
+                    <img class="rightOneAd" src="https://tpc.googlesyndication.com/simgad/149707339598969274">
 
                 </div>
 
@@ -204,16 +97,8 @@
                             <h3>READ THIS</h3>
                         </div>
 
-                        <div class="readthisDiv-Bottom">
-                            <div>
-                                <p>
-                                    Not just MiG 21, govt must <br>replace IAF's entire ageing <br>fleet | OPINION
-                                </p>
-                            </div>
-                            <div>
-                                <img
-                                    src="https://img.etimg.com/thumb/msid-81166330,width-640,resizemode-4,imgsize-204097/largest-cricket-stadium.jpg">
-                            </div>
+                        <div class="readthisDiv-Bottom" id="bottom-1">
+
 
                         </div>
                     </div>
@@ -222,46 +107,20 @@
 
                     <div>
 
-                        <div class="readthisDiv-BottomDivisions">
-                            <div>
-                                <p>
-                                    Not just MiG 21, govt must <br>replace IAF's entire ageing <br>fleet | OPINION
-                                </p>
-                            </div>
-                            <div>
-                                <img
-                                    src="https://img.etimg.com/thumb/msid-81166330,width-640,resizemode-4,imgsize-204097/largest-cricket-stadium.jpg">
-                            </div>
+                        <div class="readthisDiv-BottomDivisions" id="bottom-2">
+ 
 
                         </div>
 
                     </div>
 
-                    <div class="readthisDiv-BottomDivisions">
-                        <div>
-                            <p>
-                                Not just MiG 21, govt must <br>replace IAF's entire ageing <br>fleet | OPINION
-                            </p>
-                        </div>
-                        <div>
-                            <img
-                                src="https://img.etimg.com/thumb/msid-81166330,width-640,resizemode-4,imgsize-204097/largest-cricket-stadium.jpg">
-                        </div>
+                    <div class="readthisDiv-BottomDivisions" id="bottom-3">
 
                     </div>
 
                     <div>
 
-                        <div class="readthisDiv-BottomDivisions">
-                            <div>
-                                <p>
-                                    Not just MiG 21, govt must <br>replace IAF's entire ageing <br>fleet | OPINION
-                                </p>
-                            </div>
-                            <div>
-                                <img
-                                    src="https://img.etimg.com/thumb/msid-81166330,width-640,resizemode-4,imgsize-204097/largest-cricket-stadium.jpg">
-                            </div>
+                        <div class="readthisDiv-BottomDivisions" id="bottom-4">
 
                         </div>
                     </div>
