suggested articles section completed

--- a/Pages/detailedArticle.html
+++ b/Pages/detailedArticle.html
@@ -54,10 +54,60 @@
                 <br>
                 <br>
                 <p id="newsContent4"></p>
+                <a href="#"><img style="margin: 15px 0;" src="../Images/newsDetails/liveTvGif.webp" alt=""></a>
+                <p style="text-align: center; margin-bottom: 20px;">--- ENDS ---</p>
             </div>
             <div id="readMoreButt"><button>Read More ➥</button></div>
+            <div id="subscribeBox">
+                <div>SUBSCRIBE TO OUR NEWSLETTER</div>
+                <div>
+                    <input type="email" id="emailBox" placeholder="Enter your email">
+                    <button>GO</button>
+                </div>
+                <div id="checkBox">
+                    <input type="checkbox">
+                    <p>I agree to receive newsletters via email*</p>
+                </div>
+
+            </div>
+            <div
+                style="height: 50px; width: 100%; border-top: 1px solid #ddd; border-bottom: 1px solid #ddd; margin-bottom: 20px;">
+            </div>
+
+            <div id="commentBox">
+                <button id="commentCount"></button>
+            </div>
         </div>
-        <div id="suggestedArticle"></div>
+        <div id="suggestedArticle">
+            <div id="random1">
+                <div class="suggestedHeading">
+                    <h3>READ THIS</h3>
+                    <p></p>
+                </div>
+            </div>
+            <div id="random2">
+                <div class="suggestedHeading">
+                    <h3>RECOMMENDED</h3>
+                    <p></p>
+                </div>
+                <div class="bigPoster">
+                    <div><img src="https://i.ytimg.com/vi/Vt-V6vH24_U/maxresdefault.jpg"></div>
+                    <p>Subway fan earns free subs for life after receiving a promotional tattoo - Yahoo Finance</p>
+                </div>
+            </div>
+            <div id="random3">
+                <div class="suggestedHeading">
+                    <h3>READ RIGHT NOW</h3>
+                    <p></p>
+                </div>
+            </div>
+            <div id="random4">
+                <div class="suggestedHeading">
+                    <h3>TOP TAKES</h3>
+                    <p></p>
+                </div>
+            </div>
+        </div>
     </div>
     <div id="footerContainer"></div>
     </div>
