today update design

--- a/Pages/india.html
+++ b/Pages/india.html
@@ -12,7 +12,8 @@
     <div id="main">
         <div id="top">News/India</div>
         <hr>
-        <div id="country">India</div>
+        <div id="country">
+            <h3>India</h3></div>
         <hr>
         <div id="newspage">
         <div id="newsBox">
