--- a/indiaToday clone/liveTv.html
+++ b/indiaToday clone/liveTv.html
@@ -21,7 +21,7 @@
 
         <div id="left">
             <div>
-                <p>
+                <p class="News-LiveTV">
                     News / Live TV
                 </p>
 
@@ -34,19 +34,28 @@
             </div>
 
             <div id="player">
-                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/5sbUl8s_o_s?autoplay=1&loop=1&playlist=5sbUl8s_o_s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="100%" height="100%"
+                    src="https://www.youtube.com/embed/5sbUl8s_o_s?autoplay=1&loop=1&playlist=5sbUl8s_o_s"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
             </div>
 
-            <div>
-                <h2>SHOW VIDEOS</h2>
+            <div class="horizontalLine-flex">
+                <div>
+                    <h2 class="showVideos">SHOW VIDEOS</h2>
+                </div>
+                <hr class="horizontalLine"></hr>
             </div>
+
+
 
             <div id="newsToday-division">
                 <p>NEWS TODAY</p>
             </div>
 
             <!-- news today flrx box -->
-            <div id="newsToday-flexbox-1" class = "newsToday-flexbox"></div>
+            <div id="newsToday-flexbox-1" class="newsToday-flexbox"></div>
 
 
             <div id="newsToday-division">
@@ -54,7 +63,7 @@
             </div>
 
             <!-- NEWSTRACK WITH RAHUL KANWAL -->
-            <div id="newsToday-flexbox-2" class = "newsToday-flexbox"></div>
+            <div id="newsToday-flexbox-2" class="newsToday-flexbox"></div>
 
 
 
@@ -65,7 +74,7 @@
             </div>
 
             <!-- TO THE POINT -->
-            <div id="newsToday-flexbox-3" class = "newsToday-flexbox">
+            <div id="newsToday-flexbox-3" class="newsToday-flexbox">
             </div>
 
             <div id="newsToday-division">
@@ -73,7 +82,7 @@
             </div>
 
             <!-- INDIA FIRST -->
-            <div id="newsToday-flexbox-4" class = "newsToday-flexbox">
+            <div id="newsToday-flexbox-4" class="newsToday-flexbox">
             </div>
 
         </div>
@@ -95,6 +104,7 @@
                     <div>
                         <div id="readthisDiv-Top">
                             <h3>READ THIS</h3>
+                            <hr class="horizontalLine-2"></hr>
                         </div>
 
                         <div class="readthisDiv-Bottom" id="bottom-1">
@@ -108,7 +118,7 @@
                     <div>
 
                         <div class="readthisDiv-BottomDivisions" id="bottom-2">
- 
+
 
                         </div>
 
@@ -134,7 +144,48 @@
 
 
                 <!-- third division -->
+                <div id="readthisDiv">
+                    <div>
+                        <div id="readthisDiv-Top">
+                            <h3>PROGRAMMES </h3>
+                        </div>
 
+                        <div class="readthisDiv-Bottom" id="bottom-5">
+
+
+                        </div>
+                    </div>
+
+
+
+                    <div>
+
+                        <div class="readthisDiv-BottomDivisions" id="bottom-6">
+
+
+                        </div>
+
+                    </div>
+
+                    <div>
+
+                        <div class="readthisDiv-BottomDivisions" id="bottom-7">
+
+                        </div>
+                    </div>
+
+                    <div>
+
+                        <div class="readthisDiv-BottomDivisions" id="bottom-8">
+
+                        </div>
+                    </div>
+
+
+
+
+
+                </div>
 
 
             </div>
