--- a/Pages/india.html
+++ b/Pages/india.html
@@ -8,7 +8,20 @@
     <link rel="stylesheet" href="../Styles/india.css">
 </head>
 <body>
-    
+    <div id="head">
+
+    </div>
+    <div id="mobilesidebar">
+        <ul>
+            <li>
+                <div class="user"><img src="../Images/icons/user.png" alt=""> <a href="">LOGIN</a></div>
+            </li>
+            <li class="user"><img src="../Images/icons/icons8-microphone-30.png" alt=""><input type="text"><img src="./Images/icons/icons8-mobilesearch.svg" alt=""></li>
+        </ul>
+    </div>
+    <div id="navbar">
+
+    </div>
     <div id="main">
         <div id="top">News/India</div>
         <hr>
@@ -21,6 +34,9 @@
         <div id="sideBox"></div>
     </div>
     </div>
+    <div id="footerContainer">
+        
+    </div>
 </body>
 </html>
-<script src="../Scripts/india.js"></script>
+<script type="module" src="../Scripts/india.js"></script>
