--- a/Pages/detailedArticle.html
+++ b/Pages/detailedArticle.html
@@ -39,7 +39,17 @@
                 </div>
             </div>
             <div id="posterBox"><img src="" id="articlePoster"></div>
-            <div id="audioBox"></div>
+            <div id="audioBox">
+                <img src="../Images/newsDetails/audioPlay.png" id="playPauseAudio">
+                <div>
+                    <p id="audioText">Listen to this article now...</p>
+                    <div id="speedButtons">
+                        <button id="decreaseSpeed">-</button>
+                        <span id="speedCount"></span>
+                        <button id="increaseSpeed">+</button>
+                    </div>
+                </div>
+            </div>
             <div id="newsContentBox">
                 <p id="newsContent1"></p>
                 <br>
