--- a/Pages/detailedArticle.html
+++ b/Pages/detailedArticle.html
@@ -10,7 +10,15 @@
 </head>
 
 <body id="myPage">
-    <div id="mobilesidebar"></div>
+    <div id="mobilesidebar">
+        <ul>
+            <li>
+                <div class="user"><img src="../Images/icons/user.png" alt=""> <a href="">LOGIN</a></div>
+            </li>
+            <li class="user"><img src="../Images/icons/icons8-microphone-30.png" alt=""><input type="text"><img
+                    src="../Images/icons/icons8-mobilesearch.svg" alt=""></li>
+        </ul>
+    </div>
     <div id="head"></div>
     <div id="navbar"></div>
     <div id="articleContainer">
