--- a/Pages/login.html
+++ b/Pages/login.html
@@ -176,7 +176,7 @@ input {
     <br>
 
     <p class="p1"> Sign in to India Today</p><br><br>
-    <p class="p2"> Don't have an account? <a style="text-decoration: none; color: red;" href="google.com"> Sign Up
+    <p class="p2"> Don't have an account? <a style="text-decoration: none; color: red;" href="signup.html"> Sign Up
             Now »</a></p><br><br><br>
     <!-- <p id="p3"><span>_______________________________</span>Sign in via <span>_______________________________</span></p> -->
     </div>
