--- a/Pages/business.html
+++ b/Pages/business.html
@@ -20,7 +20,7 @@
             </li>
             <li class="user">
                 <img src="../Images/icons/icons8-microphone-30.png" alt="" /><input type="text" /><img
-                    src="./Images/icons/icons8-mobilesearch.svg" alt="" />
+                    src="../Images/icons/icons8-mobilesearch.svg" alt="" />
             </li>
         </ul>
     </div>
@@ -42,12 +42,17 @@
         </div>
     </div>
     <div id="pagination">
-        <a href="">Prev</a>
-        <a href="">1</a>
-        <a href="">2</a>
-        <a href="">3</a>
-        <a href="">4</a>
-        <a href="">Next</a>
+    <a class="a" href="">Prev</a>
+    <a class="a" href="" class="page">1</a>
+    <a class="a" href="" class="page">2</a>
+    <a class="a" href="" class="page">3</a>
+    <a class="a" href="" class="page">4</a>
+    <a class="a" href="" class="page">5</a>
+    <a class="a" href="" class="page">6</a>
+    <a class="a" href="" class="page">7</a>
+    <a class="a" href="" class="page">8</a>
+    <a class="a" href="" class="page">9</a>
+    <a class="a" href="" class="page">Next</a>
     </div>
     <div id="footerContainer"></div>
 </body>
