--- a/Pages/account.html
+++ b/Pages/account.html
@@ -83,10 +83,10 @@
             <img style="border-radius: 50%; width: 250%;" src="https://auth.indiatoday.in/sites/all/themes/itg/images/default-user.png" alt="">
         </div>
 
-        <div style="padding-left: 110px; padding-top: 40px;">
-            <h1 style="padding-top: 10px;">Anubhva Singh</h1>
-            <h2 style="padding-top: 10px;">9569811502</h2>
-            <h2 style="padding-top: 10px;">India</h2>
+        <div id="info" style="padding-left: 110px; padding-top: 40px;">
+            <h1 id="username"style="padding-top: 10px;"></h1>
+            <h2 id="useremailNumber" style="padding-top: 10px;"></h2>
+            <h2 id="usercountry" style="padding-top: 10px;"></h2>
             <hr>
            
         </div>
@@ -115,3 +115,4 @@
 </body>
 
 </html>
+<script src="../Scripts/account.js"></script>
