--- a/Pages/login.html
+++ b/Pages/login.html
@@ -272,8 +272,10 @@
     <br>
 
     <input id="input11" type="text" placeholder="Enter Your Email/Mobile">
+    <p id="emailwarn" style="display: none ;">Enter you email/mobilenumber feild is required</p>
     <br>
     <input id="input12" type="password" placeholder="Enter Your Password">
+    <p id="passwarn" style="display: none ;">Enter you password feild is required</p>
     <br />
 
     <!-- <fieldset> -->
@@ -322,4 +324,4 @@
 </body>
 
 </html>
-<script></script>
+<script src="../Scripts/login.js"></script>
