all functionality of signUp page Completed

--- a/Pages/signUp.html
+++ b/Pages/signUp.html
@@ -38,11 +38,7 @@
         <div>
             <div>
                 <select id="country">
-                    <option value="">India</option>
-                    <option value="">USA</option>
-                    <option value="">UK</option>
-                    <option value="">Nepal</option>
-                    <option value="">Gapan</option>
+                    <option value="Null">--Select Country--</option>
                 </select>
             </div>
             <div>
