updating index page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Latest News, Breaking News Today - Bollywood, Cricket, Business, Politics - IndiaToday | IndiaToday</title>
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="./Images/titleIcon.ico">
 
@@ -17,7 +17,8 @@
             <li>
                 <div class="user"><img src="./Images/icons/user.png" alt=""> <a href="">LOGIN</a></div>
             </li>
-            <li class="user"><img src="./Images/icons/icons8-microphone-30.png" alt=""><input type="text"><img src="./Images/icons/icons8-mobilesearch.svg" alt=""></li>
+            <li class="user"><img src="./Images/icons/icons8-microphone-30.png" alt=""><input type="text"><img
+                    src="./Images/icons/icons8-mobilesearch.svg" alt=""></li>
         </ul>
     </div>
     <div id="head">
@@ -34,7 +35,9 @@
             <h2>TOP STORIES</h2>
         </div>
         <div id="advitisement&opinion">
-            <div id="Ads"><p>Advertisement</p><img src="https://tpc.googlesyndication.com/simgad/17111841759593369487" alt=""></div>
+            <div id="Ads">
+                <p>Advertisement</p><img src="https://tpc.googlesyndication.com/simgad/17111841759593369487" alt="">
+            </div>
             <div>
                 <div><button id="opsr"><img src="./Images/icons8-right-24.png" alt=""></button>
                     <button id="opsl"><img src="./Images/icons8-left-24.png" alt=""></button>
