--- a/Pages/forget password.html
+++ b/Pages/forget password.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,24 +11,27 @@
 
 <body>
     <h1 style="text-align: center;">Forgotten or need to reset your password?</h1>
-    <h3 style="text-align: center; margin: -20px; padding-top: 15px;">OTP will be sent to your Email Id/Mobile no. Once verified,</h3>
+    <h3 style="text-align: center; margin: -20px; padding-top: 15px;">OTP will be sent to your Email Id/Mobile no. Once
+        verified,</h3>
     <h3 style="text-align: center;  padding-top: 8px;">you will be able to reset your password</h3>
     <div style="padding-left: 460px;">
         <input style="width: 270px; height: 35px;" type="text" placeholder="Enter Email Id/Mobile no.">
     </div>
-    
+
     <BR></BR>
-    <div  style="padding-left: 300px;">
-        <img style="width: 570px; height: 90px; cursor: pointer; justify-content: space-around ; " src="./LONG IMAGE.jpg" alt=""> 
+    <div style="padding-left: 300px;">
+        <img style="width: 570px; height: 90px; cursor: pointer; justify-content: space-around ; "
+            src="./LONG IMAGE.jpg" alt="">
     </div>
 
     <div style="width: 45%; margin: auto; display: flex; justify-content: space-between;">
-        <p> Already registered? <a  style="color: red;" href="signup.html">Sign in</a> </p>
+        <p> Already registered? <a style="color: red;" href="signup.html">Sign in</a> </p>
         <p>Not registered? <a style="color: red;" href="login.html"> Sign up</a></p>
     </div>
 
     <br><br><br><br><br><br><br><br><br><br>
-    
+
 
 </body>
+
 </html>
